--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 							<a href="twocolumn2 - residence.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Scene_final_DAUPHIN_Morgane.png" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
