--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -112,7 +112,7 @@
 							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/ Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="twocolumn2 - residence.html" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
