--- a/twocolumn2 - residence.html
+++ b/twocolumn2 - residence.html
@@ -115,7 +115,7 @@
 							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Gallerie</a>
+					<a href="Gallerie.html" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
